<resources>
    <string name="app_name">HabitTracker</string>
    <string name="app_title">Трекер привычек</string>
    <string name="priority_fmt">#%s</string>
    <string name="periodicity_fmt">%s/%s</string>
    <string name="description_add_new_habit">add new habit</string>
    <string name="type_with_double_dots">Тип:</string>
    <string name="periodicity_with_double_dots">Периодичность:</string>
    <string name="save">Сохранить</string>
    <string name="editor_of_habit">Редактор привычки</string>
    <string name="name_of_habit">Название привычки</string>
    <string name="bad_habit">Вредная</string>
    <string name="good_habit">Хорошая</string>
    <string name="neutral_habit">Нейтральная</string>
    <string name="description_of_habit">Описание привычки</string>
    <string name="periodicity_first_part">раз</string>
    <string name="periodicity_second_part">в</string>
    <string name="color_in_hsv">Цвет в HSV</string>
    <string name="color_in_rgb">Цвет в RGB</string>
    <string name="change_color_description">выбор цвета</string>
    <string name="menu_item_good_title">Хорошие</string>
    <string name="menu_item_bad_title">Плохие</string>
    <string-array name="priority_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
</resources>